feat(schema): add JSON Schema gen for config
Generates Draft 2020-12 JSON Schema from config types
using invopop/jsonschema reflector. Custom types get
JSONSchema() methods, string enums get struct tags.
Exposed as `klaudiush debug schema` with --output and
--compact flags. Taskfile tasks for generate/verify.

Signed-off-by: Bart Smykla <bartek@smykla.com>

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -247,6 +247,21 @@ tasks:
       - mise exec -- go mod download
       - mise exec -- go mod tidy
 
+  schema:generate:
+    desc: Generate JSON Schema for config
+    deps:
+      - build
+    cmds:
+      - ./bin/klaudiush debug schema --output schema/config.schema.json
+
+  schema:verify:
+    desc: Verify committed schema matches generated
+    deps:
+      - build
+    cmds:
+      - ./bin/klaudiush debug schema --output /tmp/klaudiush-schema-check.json
+      - diff schema/config.schema.json /tmp/klaudiush-schema-check.json
+
   verify:
     desc: Run all verification tasks
     cmds:
