--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -190,9 +190,10 @@ tasks:
 
 
   check:
-    desc: Alias for lint:fix
+    desc: Lint and verify generated artifacts
     cmds:
       - task: lint:fix
+      - task: schema:verify
 
   fmt:
     desc: Format code
@@ -248,19 +249,17 @@ tasks:
       - mise exec -- go mod tidy
 
   schema:generate:
-    desc: Generate JSON Schema for config
-    deps:
-      - build
+    desc: Generate versioned JSON Schema for config
     cmds:
-      - ./bin/klaudiush debug schema --output schema/config.schema.json
+      - mise exec -- go run ./cmd/schema-gen
 
   schema:verify:
-    desc: Verify committed schema matches generated
-    deps:
-      - build
+    desc: Verify committed schema is up to date
     cmds:
-      - ./bin/klaudiush debug schema --output /tmp/klaudiush-schema-check.json
-      - diff schema/config.schema.json /tmp/klaudiush-schema-check.json
+      - mkdir -p /tmp/klaudiush-schema-check
+      - mise exec -- go run ./cmd/schema-gen /tmp/klaudiush-schema-check
+      - diff -u schema/ /tmp/klaudiush-schema-check/
+      - rm -rf /tmp/klaudiush-schema-check
 
   verify:
     desc: Run all verification tasks
