docs(examples): add schema directive
Add Taplo #:schema directive to all example TOML
configs pointing to https://klaudiu.sh/schema/v1/config.json
for editor validation and autocompletion.

Signed-off-by: Bart Smykla <bartek@smykla.com>

--- a/examples/backup/development.toml
+++ b/examples/backup/development.toml
@@ -1,3 +1,4 @@
+#:schema https://klaudiu.sh/schema/v1/config.json
 # Development Backup Configuration
 #
 # Development-focused configuration with extended retention but smaller max backups.
