--- a/examples/config/crashdump.toml
+++ b/examples/config/crashdump.toml
@@ -1,3 +1,4 @@
+#:schema https://klaudiu.sh/schema/v1/config.json
 # Crash Dump Configuration Example
 # This shows all available crash dump configuration options
 
