--- a/examples/config/full.toml
+++ b/examples/config/full.toml
@@ -1,3 +1,4 @@
+#:schema https://klaudiu.sh/schema/v1/config.json
 # Complete klaudiush configuration example
 # This shows all available configuration options with their default values
 
