--- a/examples/rules/secrets-allow-list.toml
+++ b/examples/rules/secrets-allow-list.toml
@@ -1,3 +1,4 @@
+#:schema https://klaudiu.sh/schema/v1/config.json
 # Example: Secrets Allow List
 #
 # Configure exceptions for the secrets validator to allow intentional
