--- a/examples/backup/basic.toml
+++ b/examples/backup/basic.toml
@@ -1,3 +1,4 @@
+#:schema https://klaudiu.sh/schema/v1/config.json
 # Basic Backup Configuration
 #
 # This is a standard backup configuration suitable for most use cases.
