--- a/examples/backup/minimal.toml
+++ b/examples/backup/minimal.toml
@@ -1,3 +1,4 @@
+#:schema https://klaudiu.sh/schema/v1/config.json
 # Minimal Backup Configuration
 #
 # Minimal configuration with conservative storage limits.
