--- a/examples/backup/production.toml
+++ b/examples/backup/production.toml
@@ -1,3 +1,4 @@
+#:schema https://klaudiu.sh/schema/v1/config.json
 # Production Backup Configuration
 #
 # Production-focused configuration with extended retention and sync backups.
