--- a/examples/config/javascript.toml
+++ b/examples/config/javascript.toml
@@ -1,3 +1,4 @@
+#:schema https://klaudiu.sh/schema/v1/config.json
 # JavaScript/TypeScript Validator Configuration Examples
 # This file demonstrates various configurations for the JavaScript validator
 # which uses oxlint for code quality checking.
