--- a/examples/config/minimal.toml
+++ b/examples/config/minimal.toml
@@ -1,3 +1,4 @@
+#:schema https://klaudiu.sh/schema/v1/config.json
 # Minimal klaudiush configuration example
 # This shows the simplest possible configuration to get started
 
