--- a/examples/exceptions/basic.toml
+++ b/examples/exceptions/basic.toml
@@ -1,3 +1,4 @@
+#:schema https://klaudiu.sh/schema/v1/config.json
 # Example: Basic Exception Configuration
 #
 # Enable exception workflow with default settings.
