--- a/examples/exceptions/development.toml
+++ b/examples/exceptions/development.toml
@@ -1,3 +1,4 @@
+#:schema https://klaudiu.sh/schema/v1/config.json
 # Example: Development Environment Configuration
 #
 # Relaxed exception configuration for development and testing.
