--- a/examples/exceptions/strict-security.toml
+++ b/examples/exceptions/strict-security.toml
@@ -1,3 +1,4 @@
+#:schema https://klaudiu.sh/schema/v1/config.json
 # Example: Strict Security Configuration
 #
 # Secure exception configuration for production environments.
