--- a/examples/rules/advanced-patterns.toml
+++ b/examples/rules/advanced-patterns.toml
@@ -1,3 +1,4 @@
+#:schema https://klaudiu.sh/schema/v1/config.json
 # Example: Advanced Pattern Matching
 #
 # Demonstrates various pattern matching techniques including glob patterns,
