--- a/examples/rules/organization.toml
+++ b/examples/rules/organization.toml
@@ -1,3 +1,4 @@
+#:schema https://klaudiu.sh/schema/v1/config.json
 # Example: Organization-Specific Rules
 #
 # Configure rules for organization-specific git workflows where
