docs(examples): rewrite for klaudiu.sh site
READMEs were repo-style with per-file listings, settings
tables, and performance benchmarks that duplicate guide
pages. Replaced with short intros that link to site routes.

Added missing READMEs for rules and exceptions categories.

Cleaned up all file headers to produce clean titles and
one-line descriptions on the site. Replaced GitHub doc_link
in the shell plugin with klaudiu.sh/docs/plugins.

Signed-off-by: Bart Smykla <bartek@smykla.com>

--- a/examples/backup/production.toml
+++ b/examples/backup/production.toml
@@ -1,8 +1,6 @@
 #:schema https://klaudiu.sh/schema/v1/config.json
-# Production Backup Configuration
-#
-# Production-focused configuration with extended retention and sync backups.
-# Ensures maximum reliability and longer version history at the cost of storage.
+# Production
+# 20 snapshots, 90-day retention, sync writes. No data loss.
 
 [backup]
 enabled = true
