--- a/examples/config/full.toml
+++ b/examples/config/full.toml
@@ -1,6 +1,6 @@
 #:schema https://klaudiu.sh/schema/v1/config.json
-# Complete klaudiush configuration example
-# This shows all available configuration options with their default values
+# Full reference
+# Every available option with its default value.
 
 # Git Validators
 [validators.git]
