--- a/examples/config/rust.toml
+++ b/examples/config/rust.toml
@@ -1,8 +1,6 @@
 #:schema https://klaudiu.sh/schema/v1/config.json
-# Rust Validator Configuration Example
-#
-# This configuration demonstrates how to configure the Rust file validator
-# which uses rustfmt to check code formatting.
+# Rust
+# rustfmt integration with edition and path options.
 
 [validators.file.rust]
 enabled = true
