--- a/examples/rules/secrets-allow-list.toml
+++ b/examples/rules/secrets-allow-list.toml
@@ -1,11 +1,6 @@
 #:schema https://klaudiu.sh/schema/v1/config.json
-# Example: Secrets Allow List
-#
-# Configure exceptions for the secrets validator to allow intentional
-# test secrets and fixtures without triggering false positives.
-#
-# Usage:
-#   Copy to ~/.klaudiush/config.toml (global) or .klaudiush/config.toml (project)
+# Secrets allow list
+# Allow test fixtures, mocks, and .env.example files to contain secrets.
 
 [rules]
 enabled = true
