--- a/examples/backup/basic.toml
+++ b/examples/backup/basic.toml
@@ -1,8 +1,6 @@
 #:schema https://klaudiu.sh/schema/v1/config.json
-# Basic Backup Configuration
-#
-# This is a standard backup configuration suitable for most use cases.
-# Provides balanced settings between storage efficiency and version history.
+# Basic
+# 10 snapshots, 30-day retention, 50MB limit. Good default for most setups.
 
 [backup]
 # Enable the backup system
