--- a/examples/backup/minimal.toml
+++ b/examples/backup/minimal.toml
@@ -1,8 +1,6 @@
 #:schema https://klaudiu.sh/schema/v1/config.json
-# Minimal Backup Configuration
-#
-# Minimal configuration with conservative storage limits.
-# Suitable for systems with limited disk space or short-term version history needs.
+# Minimal
+# 5 snapshots, 7-day retention, 10MB limit. For tight disk budgets.
 
 [backup]
 enabled = true
