--- a/examples/config/project-override.toml
+++ b/examples/config/project-override.toml
@@ -1,6 +1,6 @@
 #:schema https://klaudiu.sh/schema/v1/config.json
-# Project-specific configuration example
-# This shows how to override global settings for a specific project
+# Project overrides
+# Override global settings for a single repository.
 
 # Override commit message validation for this project
 [validators.git.commit]
