--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -82,6 +82,15 @@ jobs:
           fetch-depth: 0
           persist-credentials: false
 
+      - name: Import GPG key
+        uses: crazy-max/ghaction-import-gpg@e89d40939c28e39f97cf32126055eeae86ba74ec # v6.3.0
+        with:
+          gpg_private_key: ${{ secrets.GPG_PRIVATE_KEY }}
+          passphrase: ${{ secrets.GPG_PASSPHRASE }}
+          git_config_global: true
+          git_user_signingkey: true
+          git_commit_gpgsign: true
+
       - name: Run semantic-release
         id: semantic
         uses: cycjimmy/semantic-release-action@b12c8f6015dc215fe37bc154d4ad456dd3833c90 # v6.0.0
@@ -205,6 +214,7 @@ jobs:
             This PR is automatically generated after each release to ensure the Nix package uses the correct pre-built binaries.
 
             **Release:** https://github.com/${{ env.REPO }}/releases/tag/v${{ env.VERSION }}
+          sign-commits: true
           branch: chore/nix-hashes-${{ env.VERSION }}
           delete-branch: true
           labels: |
