--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -122,3 +122,48 @@ jobs:
           GOOS: ${{ matrix.goos }}
           GOARCH: ${{ matrix.goarch }}
         run: go build -o bin/klaudiush-${{ matrix.goos }}-${{ matrix.goarch }} ./cmd/klaudiush
+
+  bench:
+    name: Benchmark
+    runs-on: ubuntu-24.04
+    if: github.event_name == 'pull_request'
+
+    steps:
+      - name: Checkout PR
+        uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
+
+      - name: Setup Go
+        uses: actions/setup-go@7a3fe6cf4cb3a834922a1244abfce67bcef6a0c5 # v6.2.0
+        with:
+          go-version-file: go.mod
+          cache: true
+
+      - name: Install benchstat
+        run: go install golang.org/x/perf/cmd/benchstat@latest
+
+      - name: Run benchmarks (PR)
+        env:
+          GOTMPDIR: /home/runner/work/_temp/go-tmp
+        run: |
+          mkdir -p "$GOTMPDIR"
+          go test -bench=. -benchmem -run='^$' -count=6 -timeout=10m ./... > bench-pr.txt 2>&1 || true
+
+      - name: Checkout base branch
+        uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
+        with:
+          ref: ${{ github.event.pull_request.base.sha }}
+          clean: false
+
+      - name: Run benchmarks (base)
+        env:
+          GOTMPDIR: /home/runner/work/_temp/go-tmp
+        run: |
+          mkdir -p "$GOTMPDIR"
+          go test -bench=. -benchmem -run='^$' -count=6 -timeout=10m ./... > bench-base.txt 2>&1 || true
+
+      - name: Compare benchmarks
+        run: |
+          echo "## Benchmark comparison" >> "$GITHUB_STEP_SUMMARY"
+          echo '```' >> "$GITHUB_STEP_SUMMARY"
+          benchstat bench-base.txt bench-pr.txt >> "$GITHUB_STEP_SUMMARY" 2>&1 || echo "benchstat comparison failed" >> "$GITHUB_STEP_SUMMARY"
+          echo '```' >> "$GITHUB_STEP_SUMMARY"
