ci(bench): move benchmarks to manual workflow
Removed auto-running bench job from CI. Benchmarks now
run via workflow_dispatch with configurable base ref and
iteration count. E2E binary benchmarks gated behind
bench_e2e build tag so they never run in CI.

Signed-off-by: Bart Smykla <bartek@smykla.com>

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -306,11 +306,11 @@ tasks:
       - echo "Report saved to {{.REPORT_DIR}}/bench-{{.TIMESTAMP}}.txt"
 
   bench:e2e:
-    desc: Run end-to-end binary benchmarks
+    desc: Run end-to-end binary benchmarks (manual only, not run in CI)
     deps:
       - build
     cmds:
-      - mise exec -- go test -bench=BenchmarkBinaryE2E -benchmem -run='^$' -count=3 -timeout=10m ./cmd/klaudiush
+      - mise exec -- go test -tags=bench_e2e -bench=BenchmarkBinaryE2E -benchmem -run='^$' -count=3 -timeout=10m ./cmd/klaudiush
 
   bench:timing:
     desc: Run binary with internal timing instrumentation
