ci(release): use API for verified commits
Replace @semantic-release/git with @semantic-release/exec
calling a script that commits via createCommitOnBranch
GraphQL mutation. Commits through this API with an App
token are automatically verified by GitHub, removing the
need for GPG key import in the release job.

Signed-off-by: Bart Smykla <bartek@smykla.com>

--- a/.releaserc.yml
+++ b/.releaserc.yml
@@ -84,8 +84,6 @@ plugins:
   # Note: nix/package.nix (version and hashes) is updated automatically by the
   # update-nix-hashes job in .github/workflows/release.yml after GoReleaser uploads artifacts
 
-  # Create git tag and GitHub release (GoReleaser handles the actual release)
-  - - '@semantic-release/git'
-    - assets:
-        - CHANGELOG.md
-      message: 'chore(release): ${nextRelease.version} [skip ci]'
+  # Commit changelog via GitHub API for verified signature (GoReleaser handles the actual release)
+  - - '@semantic-release/exec'
+    - prepareCmd: 'bash scripts/api-commit.sh "chore(release): ${nextRelease.version} [skip ci]"'
