--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -34,7 +34,7 @@ jobs:
           cache: true
 
       - name: Install benchstat
-        run: go install golang.org/x/perf/cmd/benchstat@latest
+        run: go install golang.org/x/perf/cmd/benchstat@v0.0.0-20260211190930-8161c38c6cdc
 
       - name: Run benchmarks (current)
         env:
