--- a/.github/sync-config.yml
+++ b/.github/sync-config.yml
@@ -11,38 +11,11 @@ sync:
       - path: CONTRIBUTING.md
         strategy: markdown
         sections:
-          - action: replace
+          - action: patch
             heading: Making Changes
-            content: |
-              ### Making Changes
-
-              1. **Create a feature branch** from `main`:
-
-                 ```bash
-                 git fetch upstream
-                 git checkout -b feat/my-feature upstream/main
-                 ```
-
-              2. **Make your changes**:
-
-                 - Follow project-specific coding standards
-                 - Keep changes focused and minimal
-                 - Add comments where logic isn't self-evident
-                 - Update documentation if needed
-
-              3. **Run quality checks** (if applicable):
-
-                 ```bash
-                 mise run check
-                 ```
-
-              4. **Commit your changes** (see [Commit Guidelines](#commit-guidelines))
-
-              5. **Push to your fork**:
-
-                 ```bash
-                 git push origin feat/my-feature
-                 ```
+            patches:
+              - find: "make check  # or task check"
+                replace: "mise run check"
 
       - path: renovate.json
         arrayStrategies:
